Added code to embed sentences As well tests Removed for now saving/reusing commands as it does not work that well at the moment
